export const snapshot = {};

snapshot[`sass plugin 1`] = `2`;

snapshot[`sass plugin 2`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      engines: 1,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      asset: true,
      engines: undefined,
      ext: ".scss",
      pageLoader: [AsyncFunction: text],
    },
    {
      asset: true,
      engines: undefined,
      ext: ".sass",
      pageLoader: [AsyncFunction: text],
    },
  ],
}
`;

snapshot[`sass plugin 3`] = `
[
]
`;

snapshot[`sass plugin 4`] = `
{
  content: "html{scroll-behavior:smooth;font:100% Helvetica,sans-serif}hr{color:blue}body{font:100% Helvetica,sans-serif;color:#333}",
  data: {
    content: '@import "./_includes/sass/colors";
@import "sass/button";
',
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/index.css",
  },
  dest: {
    ext: ".css",
    path: "/index",
  },
  src: {
    asset: true,
    ext: ".scss",
    path: "/index",
    remote: undefined,
    slug: "index",
  },
}
`;

snapshot[`sass plugin 5`] = `
{
  content: "body{color:blue}",
  data: {
    content: '@import "sass/colors"

body
  color: \$primary-color
',
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/index2.css",
  },
  dest: {
    ext: ".css",
    path: "/index2",
  },
  src: {
    asset: true,
    ext: ".sass",
    path: "/index2",
    remote: undefined,
    slug: "index2",
  },
}
`;
